# veemgrad

./: .clang-format  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
cpp-backend/: CMakeLists.txt  dev.sh
cpp-backend/include/: backend.h
cpp-backend/src/: main.cpp
cpp-backend/src/backend/: metal_backend.cpp  metal_backend.h
cpp-backend/tests/: metal_runtime_tests.cpp
cpp/metal_backend/: CMakeLists.txt  build_metal.sh  run.sh
cpp/metal_backend/src/: main.cpp
cpp/metal_backend/src/metal/: metal_matmul.cpp  metal_matmul.hpp  metal_matmul.metal  metal_wrapper.cpp  metal_wrapper.h  shader_params.h
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/cuda/: Cargo.toml
crates/metal/: Cargo.toml  build.rs
crates/metal/src/: lib.rs
crates/runtime/: Cargo.toml  build.rs
crates/runtime/src/: lib.rs
crates/tensor/src/: lib.rs
